--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,11 @@
 [profile.default]
 src = 'src'
 out = 'out'
+
 libs = ['lib']
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"] 
+optimizer = true                                              # enable or disable the solc optimizer
+optimizer_runs = 200    
 
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
