--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,6 @@ libs = ['lib']
 remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"] 
 optimizer = true                                              # enable or disable the solc optimizer
 optimizer_runs = 200    
-
+via_ir = true
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
